--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,json,md}\"",
     "type-check": "tsc --noEmit",
@@ -17,7 +18,8 @@
     "deploy:vercel": "vercel --prod",
     "deploy:netlify": "netlify deploy --prod",
     "clean": "rimraf dist node_modules",
-    "reinstall": "npm run clean && npm install"
+    "reinstall": "npm run clean && npm install",
+    "prepare": "husky"
   },
   "browserslist": [
     "> 0.5%",
@@ -35,9 +37,9 @@
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@types/node": "^22.14.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@vitejs/plugin-react": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "@vitejs/plugin-react": "5.0.2",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -47,6 +49,8 @@
     "prettier": "^3.5.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.17",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.0",
     "rimraf": "^6.0.1",
     "terser": "^5.43.1",
     "typescript": "~5.6.3",
@@ -54,5 +58,13 @@
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-imagemin": "^0.6.1",
     "vite": "^6.2.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix"
+    ],
+    "*.{ts,tsx,js,jsx,json,md,css,html}": [
+      "prettier --write"
+    ]
   }
 }
